--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,8 +200,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Withdraw"
-                    android:onClick="withdrawBtnClick"
-                    android:textAllCaps="false"
+android:id="@+id/withdraw_btn"                    android:textAllCaps="false"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/button_bg"
                     android:textColor="@color/white"
